--- a/package.json
+++ b/package.json
@@ -16,8 +16,14 @@
     "eslint": "8.30.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
+    "npx": "^10.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.1"
   }
 }
